# kitchen-fridge

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: basic.rs  provider-sync.rs  shared.rs  toggle-completions.rs
src/: cache.rs  calendar.rs  client.rs  config.rs  event.rs  item.rs  lib.rs  mock_behaviour.rs  provider.rs  resource.rs  settings.rs  task.rs  traits.rs  utils.rs
src/calendar/: cached_calendar.rs  mod.rs  remote_calendar.rs
src/data/: calendar.rs  client.rs  mod.rs  task.rs  tasks.rs
src/ical/: builder.rs  mod.rs  parser.rs
src/provider/: mod.rs  sync_progress.rs
src/utils/: comparison.rs  mod.rs
tests/: caldav_client.rs  scenarii.rs  sync-reminder.rs  sync.rs
tests/assets/: ical_with_unknown_fields.ics
