[package]
name = "kitchen-fridge"
version = "0.4.0"
authors = ["daladim"]
edition = "2018"
description = "A CalDAV (ical file management over WebDAV) library"
repository = "https://github.com/daladim/kitchen-fridge"
documentation = "https://docs.rs/kitchen-fridge"
license = "MIT"
readme = "README.md"
keywords = ["CalDAV", "client", "WebDAV", "todo", "iCloud"]
categories = ["network-programming", "web-programming::http-client"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
integration_tests = ["local_calendar_mocks_remote_calendars"]
local_calendar_mocks_remote_calendars = []

[dependencies]
env_logger = "0.9"
log = "0.4"
tokio = { version = "1.2", features = ["macros", "rt", "rt-multi-thread"]}
reqwest = "0.11"
minidom = "0.13"
url = { version = "2.2", features = ["serde"] }
bitflags = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
uuid = { version = "0.8", features = ["v4"] }
sanitize-filename = "0.3"
ical-daladim = { version = "0.8", features = ["serde-derive"] }
ics = "0.5"
chrono = { version = "0.4", features = ["serde"] }
csscolorparser = { version = "0.5", features = ["serde"] }
once_cell = "1.8"
itertools = "0.10"
